<resources>
    <string name="app_name">Firebase Reference</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="blog_url">https://blog.jakelee.co.uk</string>
    <string name="title_home">About</string>
    <string name="group_develop">Develop</string>
    <string name="title_authentication">Authentication</string>
    <string name="title_database">Database</string>
    <string name="title_functions">Cloud Functions</string>
    <string name="title_hosting">Hosting</string>
    <string name="title_ml_kit">ML Kit</string>
    <string name="title_storage">Storage</string>
    <string name="group_quality">Quality</string>
    <string name="title_crashlytics">Crashlytics</string>
    <string name="title_performance">Performance</string>
    <string name="title_test_lab">Test Lab</string>
    <string name="group_analytics">Analytics</string>
    <string name="title_audiences">Audiences</string>
    <string name="title_conversions">Conversions</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_debugview">DebugView</string>
    <string name="title_events">Events</string>
    <string name="title_funnels">Funnels</string>
    <string name="title_latest_release">Latest Release</string>
    <string name="title_retention">Retention</string>
    <string name="title_streamview">StreamView</string>
    <string name="title_user_properties">User Properties</string>
    <string name="group_grow">Grow</string>
    <string name="title_ab_testing">A/B Testing</string>
    <string name="title_admob">Admob</string>
    <string name="title_cloud_messaging">Cloud Messaging</string>
    <string name="title_dynamic_links">Dynamic Links</string>
    <string name="title_in_app_messaging">In-App Messaging</string>
    <string name="title_predictions">Predictions</string>
    <string name="title_remote_config">Remote Config</string>
    <string name="title_cloud_firestore">Cloud Firestore</string>
    <string name="title_invites">Invites</string>
    <string name="title_app_indexing">App Indexing</string>
    <string name="title_tutorial">Tutorial</string>
    <string name="title_documentation">Documentation</string>
    <string name="title_firebase">Firebase</string>
    <string name="tutorial_home">https://blog.jakelee.co.uk</string>
    <string name="tutorial_authentication">https://blog.jakelee.co.uk/2018/09/29/developing-android-apps-with-firebase-authentication/</string>
    <string name="tutorial_database">https://blog.jakelee.co.uk/2018/10/25/developing-android-apps-with-firebase-realtime-database/</string>
    <string name="tutorial_functions">https://blog.jakelee.co.uk/developing-android-apps-with-firebase-cloud-functions/</string>
    <string name="tutorial_hosting">https://blog.jakelee.co.uk/developing-web-apps-with-firebase-hosting/</string>
    <string name="tutorial_ml_kit">https://blog.jakelee.co.uk/developing-android-apps-with-firebase-ml-kit/</string>
    <string name="tutorial_storage">https://blog.jakelee.co.uk/developing-android-apps-with-firebase-cloud-storage/</string>
    <string name="tutorial_crashlytics">https://blog.jakelee.co.uk/ensuring-your-android-apps-quality-with-firebase-crashlytics/</string>
    <string name="tutorial_performance">https://blog.jakelee.co.uk/ensuring-your-android-apps-quality-with-firebase-performance-monitoring/</string>
    <string name="tutorial_test_lab"></string>
    <string name="tutorial_audiences"></string>
    <string name="tutorial_conversions"></string>
    <string name="tutorial_dashboard"></string>
    <string name="tutorial_debugview"></string>
    <string name="tutorial_events"></string>
    <string name="tutorial_funnels"></string>
    <string name="tutorial_latest_release"></string>
    <string name="tutorial_retention"></string>
    <string name="tutorial_streamview"></string>
    <string name="tutorial_user_properties"></string>
    <string name="tutorial_ab_testing"></string>
    <string name="tutorial_admob"></string>
    <string name="tutorial_cloud_messaging"></string>
    <string name="tutorial_dynamic_links"></string>
    <string name="tutorial_in_app_messaging"></string>
    <string name="tutorial_predictions"></string>
    <string name="tutorial_remote_config"></string>
    <string name="tutorial_cloud_firestore">https://blog.jakelee.co.uk/2018/10/22/developing-android-apps-with-firebase-cloud-firestore/</string>
    <string name="tutorial_app_indexing"></string>
    <string name="tutorial_invites"></string>
    <string name="documentation_home">About</string>
    <string name="documentation_authentication">https://firebase.google.com/docs/auth/</string>
    <string name="documentation_database">https://firebase.google.com/docs/database/</string>
    <string name="documentation_functions">https://firebase.google.com/docs/functions/</string>
    <string name="documentation_hosting">https://firebase.google.com/docs/hosting/</string>
    <string name="documentation_ml_kit">https://firebase.google.com/docs/ml-kit/</string>
    <string name="documentation_storage">https://firebase.google.com/docs/storage/</string>
    <string name="documentation_crashlytics">https://firebase.google.com/docs/crashlytics/</string>
    <string name="documentation_performance">https://firebase.google.com/docs/perf-mon/</string>
    <string name="documentation_test_lab">https://firebase.google.com/docs/test-lab/</string>
    <string name="documentation_audiences">https://firebase.google.com/docs/analytics/</string>
    <string name="documentation_conversions">https://firebase.google.com/docs/analytics/</string>
    <string name="documentation_dashboard">https://firebase.google.com/docs/analytics/</string>
    <string name="documentation_debugview">https://firebase.google.com/docs/analytics/</string>
    <string name="documentation_events">https://firebase.google.com/docs/analytics/android/events</string>
    <string name="documentation_funnels">https://firebase.google.com/docs/analytics/</string>
    <string name="documentation_latest_release">https://firebase.google.com/docs/analytics/</string>
    <string name="documentation_retention">https://firebase.google.com/docs/analytics/</string>
    <string name="documentation_streamview">https://firebase.google.com/docs/analytics/</string>
    <string name="documentation_user_properties">https://firebase.google.com/docs/analytics/android/properties</string>
    <string name="documentation_ab_testing">https://firebase.google.com/docs/ab-testing/</string>
    <string name="documentation_admob">https://firebase.google.com/docs/admob/</string>
    <string name="documentation_cloud_messaging">https://firebase.google.com/docs/cloud-messaging/</string>
    <string name="documentation_dynamic_links">https://firebase.google.com/docs/dynamic-links/</string>
    <string name="documentation_in_app_messaging">https://firebase.google.com/docs/in-app-messaging/</string>
    <string name="documentation_predictions">https://firebase.google.com/docs/predictions/</string>
    <string name="documentation_remote_config">https://firebase.google.com/docs/remote-config/</string>
    <string name="documentation_app_indexing">https://firebase.google.com/docs/app-indexing/</string>
    <string name="documentation_invites">https://firebase.google.com/docs/invites/</string>
    <string name="documentation_cloud_firestore">https://firebase.google.com/docs/firestore/</string>
    <string name="firebase_home">https://console.firebase.google.com/project/_/overview</string>
    <string name="firebase_authentication">https://console.firebase.google.com/u/0/project/_/authentication/users</string>
    <string name="firebase_database">https://console.firebase.google.com/project/_/database</string>
    <string name="firebase_functions">https://console.firebase.google.com/project/_/functions/list</string>
    <string name="firebase_hosting">https://console.firebase.google.com/project/_/hosting</string>
    <string name="firebase_ml_kit">https://console.firebase.google.com/project/_/ml</string>
    <string name="firebase_storage">https://console.firebase.google.com/project/_/storage/fir-referenceproject.appspot.com/files</string>
    <string name="firebase_crashlytics">https://console.firebase.google.com/project/_/crashlytics</string>
    <string name="firebase_performance">https://console.firebase.google.com/project/_/performance</string>
    <string name="firebase_test_lab">https://console.firebase.google.com/project/_/testlab/histories</string>
    <string name="firebase_audiences">https://console.firebase.google.com/project/_/analytics/audience</string>
    <string name="firebase_conversions">https://console.firebase.google.com/project/_/analytics/attribution</string>
    <string name="firebase_dashboard">https://console.firebase.google.com/project/_/analytics/overview</string>
    <string name="firebase_debugview">https://console.firebase.google.com/project/_/analytics/debugview</string>
    <string name="firebase_events">https://console.firebase.google.com/project/_/analytics/events</string>
    <string name="firebase_funnels">https://console.firebase.google.com/project/_/analytics/funnels</string>
    <string name="firebase_latest_release">https://console.firebase.google.com/project/_/analytics/latestrelease</string>
    <string name="firebase_retention">https://console.firebase.google.com/project/_/analytics/cohort</string>
    <string name="firebase_streamview">https://console.firebase.google.com/project/_/analytics/streamview</string>
    <string name="firebase_user_properties">https://console.firebase.google.com/project/_/analytics/userproperty</string>
    <string name="firebase_ab_testing">https://console.firebase.google.com/project/_/experiments/list</string>
    <string name="firebase_admob">https://console.firebase.google.com/project/_/admob</string>
    <string name="firebase_cloud_messaging">https://console.firebase.google.com/project/_/notification</string>
    <string name="firebase_dynamic_links">https://console.firebase.google.com/project/_/durablelinks</string>
    <string name="firebase_in_app_messaging">https://console.firebase.google.com/project/_/inappmessaging/onboarding</string>
    <string name="firebase_predictions">https://console.firebase.google.com/project/_/growth</string>
    <string name="firebase_remote_config">https://console.firebase.google.com/project/_/config</string>
    <string name="firebase_app_indexing">https://console.firebase.google.com/project/_/overview</string>
    <string name="firebase_invites">https://console.firebase.google.com/project/_/overview</string>
    <string name="firebase_cloud_firestore">https://console.firebase.google.com/project/_/overview</string>
    <string name="authentication_login">Login</string>
    <string name="authentication_login_custom">Custom Login</string>
    <string name="authentication_logout">Logout</string>
    <string name="authentication_logged_in_provider">Provider: %1$s \nID: %2$s \nName: %3$s \nEmail: %4$s \nPhoto: %5$s\n\n</string>
    <string name="authentication_logged_in_dates">Created: %1$s\nSigned in: %2$s \n</string>
    <string name="authentication_logged_in">Logged in!</string>
    <string name="home_hamburger">Open menu</string>
    <string name="home_tutorial">Open tutorial</string>
    <string name="home_documentation">Open documentation</string>
    <string name="home_firebase_console">Open firebase console</string>
    <string name="home_description">This app is an example implementation of all Firebase technologies.\n\nThe source code is available at https://github.com/JakeSteam/FirebaseReference.\n\nEvery technology has an associated tutorial on https://blog.jakelee.co.uk/firebase/!</string>
    <string name="crashlytics_log_data">Log data</string>
    <string name="crashlytics_update_key">Update key</string>
    <string name="crashlytics_crash">Force crash</string>
</resources>